# CMSIS-Zephyr-Executorch

./: .gitignore  README.md  vcpkg-configuration.json  zephyr.csolution.yml
.cmsis/: zephyr+IFX_T2G_B_H.dbgconf
executorch-example/: CMakeLists.txt  Kconfig  prj.conf
executorch-example/ai_layer/: REPORT.md
executorch-example/boards/: fvp_config.txt
executorch-example/zephyr/scripts/: generate_ai_layer_report.py  sync_ai_layer_from_stage1.sh
